versions/v0.25/modules/en/pages/changelogs/changelogs/v0.25.1.adoc
= "v0.25.1"
:description: Learn about changes in Rancher Turtles version v0.25.1 that fix fetching CAPI images in air-gapped environments using the system-default-registry setting
:revdate: 2026-09-02
:page-revdate: {revdate}

== Description

Release Date: 2025-12-16

Rancher Turtles - Cluster API integration in Rancher.

This release of Rancher Turtles fixes an issue with fetching CAPI images in air-gapped environments. The new logic will use the Rancher setting system-default-registry to override the registry from where CAPI provider images are pulled.

* Rancher community: core CAPI is fetched from Docker Hub.
* Rancher Prime: CAPI providers are fetched from Prime registry.

=== Other Changes

* [release/v0.25] Backport multiple commits to prepare for 2.13.1 by @yiannistri in https://github.com/rancher/turtles/pull/1929[#1929].
* [release/v0.25] bump slsactl to v0.1.11 by @salasberryfin in https://github.com/rancher/turtles/pull/1934[#1934].
* [release/v0.25] fix: permissions to create release from workflow by @salasberryfin in https://github.com/rancher/turtles/pull/1935[#1935].

=== Full Changelog: 

Review the full list of changes: https://github.com/rancher/turtles/compare/v0.25.0%E2%80%A6v0.25.1[v0.25.0...v0.25.1]

== Download

[cols="3,1,1" options="header" frame="all" grid="rows"]
|===
| Name | Created At | Updated At

| https://github.com/rancher/turtles/releases/download/v0.25.1/rancher-turtles-0.25.1.tgz[rancher-turtles-0.25.1.tgz] | 2025-12-16 | 2025-12-16

|===

__Information retrieved from https://github.com/rancher/turtles/releases/tag/v0.25.1[v0.25.1 GitHub release].__